# design-patterns-cxx

./: .clang-format  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
cmake/: config-base.h.in  cxx-detect-compilers.cmake  cxx-macros.cmake  dummy-project.cmake  options-def.cmake  prerequisites.cmake  version-def.cmake  version.h.in  versions-gen.cmake
docs/: CMakeLists.txt  README.md  dp-cxx.in.doxygen
examples/: CMakeLists.txt  simple-app.cc
include/: design_patterns.hh  design_patterns_cxx.hh  undo_cxx.hh
include/design_patterns/: dp-assert.hh  dp-common.hh  dp-config.hh  dp-debug.hh  dp-def.hh  dp-log.hh  dp-mediator.hh  dp-msg-dispatch.hh  dp-resp-chain.hh  dp-string.hh  dp-tree.hh  dp-util.hh  dp-x-class.hh  dp-x-test.hh  dp.hh
include/design_patterns_cxx/: dp-chrono.hh  dp-common.hh  dp-config.hh  dp-def.hh  dp-if.hh  dp-log.hh  dp-msg-dispatch.hh  dp-tree.hh  dp-util.hh  dp.hh
include/undo_cxx/: undo-common.hh  undo-def.hh  undo-log.hh  undo-unmgr.hh  undo.hh  undo.txt
include/undo_cxx/detail/: undo-if.hh
tests/: CMakeLists.txt  basic.cc  cxx20-coroutine.cc  cxx20-one.cc  detects.cc  dp-builder.cc  dp-factory.cc  dp-flyweight.cc  dp-mediator.cc  dp-memento.cc  dp-observer.cc  dp-responsibility-chain.cc  dp-rx.cc  dp-slot.cc  dp-state.cc  dp-strategy.cc  dp-strategy.puml  dp-visitor.cc  factory.cc  fork-1.cc  fork-2.cc  fork-3.cc  lambda.cc  msg-dispatch.cc  partial-curry.cc  partial_curry.cc  tree.cc  type-name-2.cc  type-name.cc  undo.cc
tests/cxx20-one/: v1.cc
tests/cxx20-one/mod3/: mod.cc
